--- a/front/src/assets/styles/main.scss
+++ b/front/src/assets/styles/main.scss
@@ -1,5 +1,9 @@
 // src/assets/styles/main.scss
 
+@use 'base/global';
 @use 'abstracts/variables';
 @use 'components/dashboard';
 @use 'pages/analyze-page';
+@use 'components/report-card';
+@use 'components/header';
+@use 'pages/create-report-page';
