--- a/front/src/assets/styles/components/_dashboard.scss
+++ b/front/src/assets/styles/components/_dashboard.scss
@@ -11,15 +11,11 @@
   }
 
   &__grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+   display: grid;
+    grid-template-columns: repeat(2, 1fr); // solo 2 columnas por defecto
     gap: 1.5rem;
 
-    @media (max-width: 992px) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
       grid-template-columns: 1fr;
     }
   }
